# github-repository-cleaner

./: Cargo.toml  INSTRUCTIONS.md  README.md
.github/workflows/: rust.yml
src/: main.rs
