[package]
name = "github-repository-cleaner"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
